--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1"
   },
